--- a/ui.html
+++ b/ui.html
@@ -30,7 +30,8 @@
       <body>
         <p>Select a Component or Instance in Figma, then click the button below to organize all variants of its Component Set into labeled frames.</p>
         <button id="organize">Organize Variants</button>
-        <div style="margin-top: 16px;">
+        <!-- Dark mode feature (hidden by default; enable via ENABLE_DARK_MODE flag in script) -->
+        <div id="darkFeature" style="margin-top: 16px;">
           <div style="margin-bottom: 8px;">
             <label for="collectionName" style="display: block; margin-bottom: 4px; font-size: 12px;">Variable Collection:</label>
             <input type="text" id="collectionName" value="General" style="width: 100%; padding: 4px 8px; border: 1px solid #ccc; border-radius: 4px; font-size: 14px;">
@@ -43,19 +44,31 @@
             <label for="darkModeName" style="display: block; margin-bottom: 4px; font-size: 12px;">Dark Mode Name:</label>
             <input type="text" id="darkModeName" value="Dark" style="width: 100%; padding: 4px 8px; border: 1px solid #ccc; border-radius: 4px; font-size: 14px;">
           </div>
+          <button id="createDarkMode" style="margin-top: 8px;">Create Dark Mode Variants</button>
         </div>
-        <button id="createDarkMode" style="margin-top: 8px;">Create Dark Mode Variants</button>
         <script>
+          // Feature flag: keep dark mode functionality hidden for publish; set to true locally for dev
+          const ENABLE_DARK_MODE = false;
+
           document.getElementById('organize').onclick = () => {
             parent.postMessage({ pluginMessage: { type: 'organize-variants' } }, '*');
           };
-          
-          document.getElementById('createDarkMode').onclick = () => {
-            const collectionName = document.getElementById('collectionName').value;
-            const lightModeName = document.getElementById('lightModeName').value;
-            const darkModeName = document.getElementById('darkModeName').value;
-            parent.postMessage({ pluginMessage: { type: 'create-dark-mode', collectionName, lightModeName, darkModeName } }, '*');
-          };
+
+          // Hide dark mode UI and disable handler unless enabled
+          const darkFeatureEl = document.getElementById('darkFeature');
+          if (!ENABLE_DARK_MODE && darkFeatureEl) {
+            darkFeatureEl.style.display = 'none';
+          } else if (ENABLE_DARK_MODE) {
+            const btn = document.getElementById('createDarkMode');
+            if (btn) {
+              btn.onclick = () => {
+                const collectionName = document.getElementById('collectionName').value;
+                const lightModeName = document.getElementById('lightModeName').value;
+                const darkModeName = document.getElementById('darkModeName').value;
+                parent.postMessage({ pluginMessage: { type: 'create-dark-mode', collectionName, lightModeName, darkModeName } }, '*');
+              };
+            }
+          }
         </script>
       </body>
     </html>
